update image responsive, animations

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -62,11 +62,11 @@ button:hover {
 }
 
 a {
-  transition: all 0.25s ease;
+  transition: all 0.5s ease;
   color: inherit;
   text-decoration: none;
   &:hover {
-    color: #f97316;
+    color: #f97316 !important;
     border-color: #f97316;
   }
 }
